# vision-net

./: .dockerignore  .gitignore  LICENSE.md  README.MD  cuda-install.sh  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.gpu  README.md  pyproject.toml
backend/app/: main.py  service.py
desktop/: __init__.py  cuda.py  cvat.py  exe.sh  main.py  main.spec  pyproject.toml
desktop/configs/: model_config.json
desktop/gui/: __init__.py  dataset_panel.py  inference_panel.py  logs_panel.py  main_window.py  training_panel.py
desktop/ml/: __init__.py  assp.py  dataset.py  inference.py  loss.py  model.py  trainer.py  types.py  weights.py
desktop/utils/: __init__.py  coco_parser.py  config_manager.py  image_utils.py  ml_utils.py
docs/: OLD_CLASSES.MD  features.md
docs/backend/: README.md
docs/desktop/: README.md  api.md  architecture.md  small-object-segmentation.md  user_guide.md
docs/frontend/: README.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts
